re: #34, updating to fix spacing for all viewports, reverting to 4 columns

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -56,6 +56,8 @@ dl { border:none; }
 #block-departmentstaff  > div,
 #block-committeemembers > div > div {
     font-size:$font-size-normal;
+    > div { text-align:center; margin-bottom: 1rem; padding: .5rem; }
+    > div dl dd { line-height: 2rem; }
 
     @media all and (min-width:$viewport-medium) {
         display:flex;
@@ -63,8 +65,7 @@ dl { border:none; }
         justify-content:space-between;
 
         h3 { margin:0; }
-        > div { width:25%; text-align:center; margin-bottom: 1rem; padding: .5rem; }
-        > div dl dd { line-height: 2rem; } 
+        > div { width: 20%; }
     }
     @media all and (min-width:$viewport-large) {
         width:$viewport-large; margin:0 auto;
